--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,12 @@
+.header {
+    background-color: rgba(0,0,0,0.7);
+}
+
 .header a {
     color: #FFFFFF;
+}
+
+.header .navbar-brand {
+    font-family: 'Over the Rainbow';
+    font-size: 2rem;
 }
