--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,3 +1,12 @@
+.about {
+    padding-bottom: 3rem;
+}
+
 .about .image-block img {
     width: 70%;
+}
+
+.about .blockquote p {
+    font-size: 3rem;
+    font-weight: 300;
 }
