--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto';
+  font-weight: 300;
+  letter-spacing: 0.05em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
