--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -6,9 +6,9 @@
     display: flex;
     align-items: center;
     color: #FFFFFF;
-    height: 100%;
+    height: 100vh;
     width: 100%;
-    position: absolute;
+    /* position: absolute; */
 }
 
 .banner::before {
