--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #222222;
   color: #ffffff;
+  font-size: 16px;
 }
 
 code {
@@ -22,5 +23,17 @@ h1, h2, h3, h4, h5, h6 {
 @media (min-width: 1600px) {
   .container {
     max-width: 1400px;
+  }
+}
+
+@media (max-width: 426px) {
+  html {
+    font-size: 15px !important;
+  }
+}
+
+@media (max-width: 376px) {
+  html {
+    font-size: 13px !important;
   }
 }
