--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,43 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto';
-  font-weight: 300;
-  letter-spacing: 0.05em;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #222222;
-  color: #ffffff;
-  font-size: 16px;
+	margin: 0;
+	padding: 0;
+	font-family: 'Roboto';
+	font-weight: 300;
+	letter-spacing: 0.05em;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: #222222;
+	color: #ffffff;
+	font-size: 16px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Raleway';
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: 'Raleway';
 }
 
 @media (min-width: 1600px) {
-  .container {
-    max-width: 1400px;
-  }
+	.container {
+		max-width: 1400px;
+	}
 }
 
 @media (max-width: 426px) {
-  html {
-    font-size: 15px !important;
-  }
+	html {
+		font-size: 15px !important;
+	}
 }
 
 @media (max-width: 376px) {
-  html {
-    font-size: 13px !important;
-  }
+	html {
+		font-size: 13px !important;
+	}
 }
