--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,12 +1,13 @@
 .banner {
-	background-image: url('./../../assets/images/scr-outside2.jpg');
+	background-image: url('./../../assets/images/LRE-0512.jpg');
 	background-blend-mode: saturation(20);
 	background-size: cover;
+	background-position: bottom;
 	background-attachment: fixed;
 }
 
 .banner .backdrop {
-	backdrop-filter: brightness(0.7);
+	backdrop-filter: brightness(1);
 	animation: blurring infinite 10s;
 	-webkit-animation: blurring infinite 10s;
 	-moz-animation: blurring infinite 10s;
@@ -14,44 +15,45 @@
 
 @keyframes blurring {
 	0% {
-		backdrop-filter: brightness(0.7);
+		backdrop-filter: brightness(0.9);
 	}
 	50% {
-		backdrop-filter: brightness(0.4);
+		backdrop-filter: brightness(0.7);
 	}
 	100% {
-		backdrop-filter: brightness(0.7);
+		backdrop-filter: brightness(0.9);
 	}
 }
 
 @-moz-keyframes blurring {
 	0% {
-		backdrop-filter: brightness(0.7);
+		backdrop-filter: brightness(0.9);
 	}
 	50% {
-		backdrop-filter: brightness(0.4);
+		backdrop-filter: brightness(0.7);
 	}
 	100% {
-		backdrop-filter: brightness(0.7);
+		backdrop-filter: brightness(0.9);
 	}
 }
 
 @-webkit-keyframes blurring {
 	0% {
-		backdrop-filter: brightness(0.7);
+		backdrop-filter: brightness(0.9);
 	}
 	50% {
-		backdrop-filter: brightness(0.4);
+		backdrop-filter: brightness(0.7);
 	}
 	100% {
-		backdrop-filter: brightness(0.7);
+		backdrop-filter: brightness(0.9);
 	}
 }
 
 .banner .container {
 	display: flex;
-	align-items: center;
-	color: #ffffff;
+	/* align-items: center; */
+	padding-top: 4rem;
+	color: #000000;
 	height: 100vh;
 	width: 100%;
 }
@@ -62,27 +64,30 @@
 }
 
 .banner h1 {
-	font-family: 'Over the Rainbow';
+	/* font-family: 'Over the Rainbow'; */
+	font-family: 'Sail', cursive;
+	filter: drop-shadow(2px 2px 0px rgba(255, 255, 255, 0.8));
 	font-weight: 300;
 	font-size: 4rem;
 	letter-spacing: 0.3rem;
-	color: rgba(255, 255, 255, 0.6);
+	color: #000000;
 }
 
 .banner .btn-secondary {
 	margin-top: 1rem;
 	background-color: transparent;
-	border: 1px solid #ffffff;
+	border: 1px solid rgba(0, 0, 0, 0.6);
 	margin-right: 2rem;
 	padding: 1rem 1.6rem;
-	border-radius: 3rem;
+	border-radius: 5rem;
 	font-size: 1.2rem;
 	transition: 200ms;
 	font-weight: 300;
+	color: #000000;
 }
 
 .banner .btn-secondary:hover {
-	border: 1px solid rgba(255, 255, 255, 0.6);
-	background-color: rgba(255, 255, 255, 0.6);
-	color: black;
+	border: 1px solid rgba(0, 0, 0, 0.6);
+	background-color: rgba(0, 0, 0, 0.6);
+	color: #ffffff;
 }
