--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,10 +3,13 @@
 }
 
 .position-sticky {
-	position: sticky !important;
+	/* position: sticky !important; */
 	top: 0;
 	z-index: 2;
+	font-weight: 900;
 	background-color: rgba(34, 34, 34, 0.95);
+	/* border-bottom: 1px solid; */
+	text-align: center;
 }
 
 .primary {
