--- a/src/components/WorkTraces/WorkTraces.css
+++ b/src/components/WorkTraces/WorkTraces.css
@@ -6,18 +6,18 @@
 .work-traces .company-logo {
 	display: flex;
 	justify-content: center;
-	filter: grayscale(100);
+	filter: grayscale(1);
 	align-items: center;
 	opacity: 0.8;
 	transition: 500ms;
 	margin-bottom: 3rem;
 }
 
-.work-traces .company-logo:hover {
-	filter: grayscale(0);
-	opacity: 1;
+.work-traces .company-logo img {
+	width: 180px;
 }
 
-.work-traces .company-logo img {
-	width: 60%;
+.work-traces .company-logo:hover {
+	opacity: 1;
+	filter: grayscale(0);
 }
