--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -3,11 +3,15 @@
 	.image-block {
 		img {
 			width: 70%;
-			filter: grayscale(100);
-			opacity: 0.7;
+			filter: brightness(1);
+			border-radius: 15px;
 			transition: 500ms;
+			box-shadow: 0px 30px 50px -50px transparent;
+			border: 2px solid transparent;
 			&:hover {
-				filter: grayscale(0);
+				filter: brightness(2);
+				box-shadow: 0px 30px 50px -50px #fff;
+				border: 2px solid #fff;
 			}
 		}
 		p {
