--- a/src/components/Story/story.scss
+++ b/src/components/Story/story.scss
@@ -7,8 +7,10 @@
 			filter: grayscale(100);
 			opacity: 0.7;
 			transition: 500ms;
+			border: 2px solid transparent;
 			&:hover {
 				filter: grayscale(0);
+				border: 2px solid #fff;
 			}
 		}
 		p {
