--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -3,13 +3,13 @@
 	.image-block {
 		img {
 			width: 70%;
-			filter: brightness(1);
+			filter: grayscale(1);
 			border-radius: 15px;
 			transition: 500ms;
 			box-shadow: 0px 30px 50px -50px transparent;
 			border: 2px solid transparent;
 			&:hover {
-				filter: brightness(2);
+				filter: grayscale(0);
 				box-shadow: 0px 30px 50px -50px #fff;
 				border: 2px solid #fff;
 			}
