--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,6 +7,10 @@
 	padding: 4rem 0rem;
 	color: #ffffff;
 	text-align: center;
+	.name-logo{ 
+		width: 24rem;
+		margin-top: 1rem;
+	}
 	h2 {
 		margin-bottom: 2rem;
 		margin-bottom: 2rem;
