--- a/src/index.scss
+++ b/src/index.scss
@@ -6,15 +6,15 @@ body {
 	letter-spacing: 0.05em;
 	-webkit-font-smoothing: antialiased;
 	/* -moz-osx-font-smoothing: grayscale; */
-	background-image: url('./assets/images/LRE-0512.jpg');
+	background-image: url('./assets/images/LR-3494.jpg');
 	background-size: cover;
-	background-position: bottom;
+	background-position: top;
 	background-attachment: fixed;
 	color: #ffffff;
 	/* font-size: 16px; */
 }
 #root {
-	backdrop-filter: blur(15px);
+	backdrop-filter: blur(20px);
 }
 #root > div {
 	background-color: rgba(34, 34, 34, 0.9);
