--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -4,14 +4,14 @@
 		img {
 			width: 70%;
 			filter: grayscale(1);
-			border-radius: 15px;
+			border-radius: 15px 15px 0px 15px;
 			transition: 500ms;
-			box-shadow: 0px 30px 50px -50px transparent;
-			border: 2px solid transparent;
+			// box-shadow: 0px 30px 50px -50px transparent;
+			border: 1px solid transparent;
 			&:hover {
-				filter: grayscale(0);
+				filter: grayscale(0.25);
 				box-shadow: 0px 30px 50px -50px #fff;
-				border: 2px solid #fff;
+				border-color: #fff;
 			}
 		}
 		p {
