--- a/src/components/Story/story.scss
+++ b/src/components/Story/story.scss
@@ -3,14 +3,15 @@
 	.image-block {
 		img {
 			width: 100%;
-			border-radius: 10px;
+			border-radius: 15px 15px 0px 15px;
 			filter: grayscale(100);
 			opacity: 0.7;
 			transition: 500ms;
-			border: 2px solid transparent;
+			border: 1px solid transparent;
 			&:hover {
+				box-shadow: 0px 30px 50px -50px #fff;
 				filter: grayscale(0);
-				border: 2px solid #fff;
+				border-color: #fff;
 			}
 		}
 		p {
