--- a/src/components/Blog/Blog.scss
+++ b/src/components/Blog/Blog.scss
@@ -6,9 +6,14 @@
 	.card {
 		border: none;
 		color: #fff;
+		background: transparent;
+		img {
+			border-radius: 20px 20px 0px 0px;
+		}
 		.card-body {
 			border: none;
 			background-color: #000000;
+			border-radius: 0px 0px 20px 20px;
 		}
 		.card-title {
 			font-size: 1.2rem;
