--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,21 +1,33 @@
 .banner {
-	background-image: url('./../../assets/images/LRE-0512.jpg');
+	background-image: url('./../../assets/images/banner.webp');
 	// background-blend-mode: saturation(20);
 	background-size: cover;
 	background-position: bottom;
 	background-attachment: fixed;
+	height: 100vh;
 	.backdrop {
+		background: inherit;
+		height: inherit;
 		backdrop-filter: brightness(1);
 		animation: blurring infinite 10s;
 		-webkit-animation: blurring infinite 10s;
 		-moz-animation: blurring infinite 10s;
 	}
 	.container {
+		background: inherit;
 		display: flex;
 		padding-top: 6rem;
 		color: #000000;
-		height: 100vh;
 		width: 100%;
+		.row {
+			background: inherit;
+			.col-12 {
+				padding: 30px;
+				border-radius: 30px;
+				background-color: rgba(171, 139, 101, 0.1);
+				backdrop-filter: blur(20px);
+			}
+		}
 	}
 	h4 {
 		font-weight: 300;
@@ -23,7 +35,7 @@
 	}
 	h1 {
 		font-family: 'Sail', cursive;
-		filter: drop-shadow(2px 2px 0px rgba(255, 255, 255, 0.8));
+		filter: drop-shadow(2px 2px 0px rgba(171, 139, 101, 1));
 		font-weight: 300;
 		font-size: 4rem;
 		letter-spacing: 0.3rem;
@@ -38,12 +50,12 @@
 		border-radius: 5rem;
 		font-size: 1.2rem;
 		transition: 200ms;
-		font-weight: 300;
+		// font-weight: 300;
 		color: #000000;
 		&:hover {
-			border: 1px solid rgba(0, 0, 0, 0.6);
-			background-color: rgba(0, 0, 0, 0.6);
-			color: #ffffff;
+			// border: 1px solid rgba(171, 139, 101, 1);
+			background-color: rgba(171, 139, 101, 1);
+			color: #000000;
 		}
 	}
 }
@@ -53,7 +65,7 @@
 		backdrop-filter: brightness(1);
 	}
 	50% {
-		backdrop-filter: brightness(0.5);
+		backdrop-filter: brightness(0.8);
 	}
 	100% {
 		backdrop-filter: brightness(1);
@@ -65,7 +77,7 @@
 		backdrop-filter: brightness(1);
 	}
 	50% {
-		backdrop-filter: brightness(0.5);
+		backdrop-filter: brightness(0.8);
 	}
 	100% {
 		backdrop-filter: brightness(1);
@@ -77,7 +89,7 @@
 		backdrop-filter: brightness(1);
 	}
 	50% {
-		backdrop-filter: brightness(0.5);
+		backdrop-filter: brightness(0.8);
 	}
 	100% {
 		backdrop-filter: brightness(1);
