--- a/src/index.scss
+++ b/src/index.scss
@@ -1,22 +1,24 @@
 body {
-	margin: 0;
-	padding: 0;
-	font-family: 'Roboto';
-	font-weight: 300;
-	letter-spacing: 0.05em;
-	-webkit-font-smoothing: antialiased;
-	/* -moz-osx-font-smoothing: grayscale; */
-	color: #ffffff;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto";
+  font-weight: 300;
+  letter-spacing: 0.05em;
+  -webkit-font-smoothing: antialiased;
+  /* -moz-osx-font-smoothing: grayscale; */
+  color: #ffffff;
+  overflow-x: hidden;
 }
 #root {
-	backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
 }
 #root > div {
-	background-color: rgba(12, 12, 12, 1);
+  background-color: rgba(12, 12, 12, 1);
 }
 
 code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 h1,
@@ -25,23 +27,23 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Raleway';
+  font-family: "Raleway";
 }
 
 @media (min-width: 1600px) {
-	.container {
-		max-width: 1400px;
-	}
+  .container {
+    max-width: 1400px;
+  }
 }
 
 @media (max-width: 426px) {
-	html {
-		font-size: 15px !important;
-	}
+  html {
+    font-size: 15px !important;
+  }
 }
 
 @media (max-width: 376px) {
-	html {
-		font-size: 13px !important;
-	}
+  html {
+    font-size: 13px !important;
+  }
 }
