--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -34,7 +34,7 @@
     .skill-set {
       margin-top: 16rem;
       margin-bottom: 6rem;
-
+      position: relative;
       .block {
         position: relative;
         margin-bottom: 9rem;
