--- a/src/components/Blog/Blog.scss
+++ b/src/components/Blog/Blog.scss
@@ -1,32 +1,58 @@
 .blog {
-	min-height: 100vh;
-	a {
-		text-decoration: none;
-	}
-	.card {
-		border: none;
-		color: #fff;
-		background: transparent;
-		img {
-			border-radius: 20px 20px 0px 0px;
-		}
-		.card-body {
-			border: none;
-			background-color: #000000;
-			border-radius: 0px 0px 20px 20px;
-		}
-		.card-title {
-			font-size: 1.2rem;
-			font-weight: 500;
-		}
-		.card-subtitle {
-			font-size: 0.8rem;
-			font-weight: 500;
-			color: #848484;
-		}
-		.card-text {
-			font-size: 0.9rem;
-			margin: 1rem 0rem;
-		}
-	}
+  min-height: 100vh;
+  a {
+    text-decoration: none;
+  }
+  .card {
+    border: none;
+    color: #fff;
+    background: transparent;
+    transition: 200ms;
+    &:hover {
+      .card-body {
+        opacity: 1;
+        backdrop-filter: blur(2px);
+      }
+    }
+    img {
+      border-radius: 20px;
+    }
+    .card-body {
+      transition: 200ms;
+      border: none;
+      background-color: rgba($color: #000000, $alpha: 0.5);
+      border-radius: 20px;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      opacity: 0;
+      .marquee-container {
+        display: none;
+        position: absolute;
+        bottom: 12px;
+        animation-duration: 0.2s;
+        h1 {
+          font-size: 12rem;
+        }
+      }
+    }
+    .card-title {
+      font-size: 3rem;
+      font-weight: 500;
+      text-align: center;
+    }
+    .card-subtitle {
+      font-size: 1.5rem;
+      font-weight: 500;
+      color: #dbdbdb;
+    }
+    .card-text {
+      font-size: 0.9rem;
+      margin: 1rem 0rem;
+    }
+  }
 }
