--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,38 +1,27 @@
 .footer {
-	background-color: rgba(34, 34, 34, 0.72);
-	padding: 4rem 0rem;
-	color: #ffffff;
-	text-align: center;
-	background-color: rgba(34, 34, 34, 0.72);
-	padding: 4rem 0rem;
-	color: #ffffff;
-	text-align: center;
-	.name-logo{ 
-		width: 24rem;
-		margin-top: 1rem;
-	}
-	h2 {
-		margin-bottom: 2rem;
-		margin-bottom: 2rem;
-	}
-	h4 {
-		a {
-			color: #848484;
-			font-size: 3rem;
-			padding: 15px 2rem;
-			color: #848484;
-			font-size: 3rem;
-			padding: 15px 2rem;
-			svg {
-				transition: 200ms;
-				transition: 200ms;
-				&:hover {
-					color: #ffffff;
-					transform: scale(1.4, 1.4);
-					color: #ffffff;
-					transform: scale(1.4, 1.4);
-				}
-			}
-		}
-	}
+  background-color: rgba(34, 34, 34, 0.72);
+  padding: 4rem 0rem;
+  color: #ffffff;
+  text-align: center;
+  .name-logo {
+    width: 24rem;
+    margin-top: 1rem;
+  }
+  h2 {
+    margin-bottom: 2rem;
+  }
+  h4 {
+    a {
+      color: #848484;
+      font-size: 3rem;
+      padding: 15px 2rem;
+      svg {
+        transition: 200ms;
+        &:hover {
+          color: rgba(171, 139, 101, 1);
+          transform: scale(1.4, 1.4);
+        }
+      }
+    }
+  }
 }
