--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,106 +1,86 @@
 .about {
-  min-height: 100vh;
-  .container {
-    margin-top: 5rem;
-    .image-block {
-      img {
-        width: 320px;
-        filter: grayscale(1);
-        border-radius: 75px 75px 0px 75px;
-        transition: 500ms;
-        // box-shadow: 0px 30px 50px -50px transparent;
-        border: 2px solid transparent;
-        &:hover {
-          filter: grayscale(0.25);
-          box-shadow: 0px 0px 50px -40px #fff;
-          border-color: #fff;
-        }
-      }
-      p {
-        color: #aaaaaa;
-      }
-      p.caption {
-        color: #cccccc;
-      }
-    }
-    .blockquote {
-      p {
-        font-size: 3rem;
-        font-weight: 300;
-        color: #ffffff;
-      }
-    }
+	min-height: 100vh;
+	.container {
+		margin-top: 5rem;
+		.image-block {
+			img {
+				width: 320px;
+				filter: grayscale(1);
+				border-radius: 75px 75px 0px 75px;
+				transition: 500ms;
+				// box-shadow: 0px 30px 50px -50px transparent;
+				border: 2px solid transparent;
+				&:hover {
+					filter: grayscale(0.25);
+					box-shadow: 0px 0px 50px -40px #fff;
+					border-color: #fff;
+				}
+			}
+			p {
+				color: #aaaaaa;
+			}
+			p.caption {
+				color: #cccccc;
+			}
+		}
+		.blockquote {
+			p {
+				font-size: 3rem;
+				font-weight: 300;
+				color: #ffffff;
+			}
+		}
 
-    .skill-set {
-      margin-top: 16rem;
-      margin-bottom: 6rem;
-      position: relative;
-      .block {
-        position: relative;
-        margin-bottom: 9rem;
-        h2 {
-          color: #fff;
-          font-size: 8em;
-          &:nth-child(1) {
-            color: transparent;
-            -webkit-text-stroke: 2px rgba(171, 139, 101, 1);
-          }
-          &:nth-child(2) {
-            top: 0;
-            position: absolute;
-            color: rgb(202, 164, 117);
-            animation: animate 4s ease-in-out infinite;
-          }
-        }
-      }
-      .skill {
-        border-bottom: 1px solid;
-        &:hover {
-          h2 {
-            background-color: rgba(171, 139, 101, 0.5);
-            -webkit-text-stroke-color: #fff;
-          }
-        }
-        h2 {
-          font-size: 10em;
-          color: transparent;
-          text-transform: uppercase;
-          -webkit-text-stroke: 2px rgba(171, 139, 101, 1);
-          display: inline;
-          padding: 10px 15px;
-        }
-      }
-    }
-  }
+		.skill-set {
+			margin-top: 16rem;
+			margin-bottom: 6rem;
+			position: relative;
+			overflow: hidden;
+			.block {
+				position: relative;
+				margin-bottom: 9rem;
+				h2 {
+					color: #fff;
+					font-size: 8em;
+					&:nth-child(1) {
+						color: transparent;
+						-webkit-text-stroke: 2px rgba(171, 139, 101, 1);
+					}
+					&:nth-child(2) {
+						top: 0;
+						position: absolute;
+						color: rgb(202, 164, 117);
+						animation: animate 4s ease-in-out infinite;
+					}
+				}
+			}
+			.skill {
+				border-bottom: 1px solid;
+				&:hover {
+					h2 {
+						background-color: rgba(171, 139, 101, 0.5);
+						-webkit-text-stroke-color: #fff;
+					}
+				}
+				h2 {
+					font-size: 10em;
+					color: transparent;
+					text-transform: uppercase;
+					-webkit-text-stroke: 2px rgba(171, 139, 101, 1);
+					display: inline;
+					padding: 10px 15px;
+				}
+			}
+		}
+	}
 }
 
 @keyframes animate {
-  0%,
-  100% {
-    clip-path: polygon(
-      0% 45%,
-      16% 44%,
-      33% 50%,
-      54% 60%,
-      70% 61%,
-      84% 59%,
-      100% 52%,
-      100% 100%,
-      0% 100%
-    );
-  }
-
-  50% {
-    clip-path: polygon(
-      0% 60%,
-      15% 65%,
-      34% 66%,
-      51% 62%,
-      67% 50%,
-      84% 45%,
-      100% 46%,
-      100% 100%,
-      0% 100%
-    );
-  }
+	0%,
+	100% {
+		clip-path: polygon(0% 45%, 16% 44%, 33% 50%, 54% 60%, 70% 61%, 84% 59%, 100% 52%, 100% 100%, 0% 100%);
+	}
+	50% {
+		clip-path: polygon(0% 60%, 15% 65%, 34% 66%, 51% 62%, 67% 50%, 84% 45%, 100% 46%, 100% 100%, 0% 100%);
+	}
 }
