--- a/src/components/WorkTraces/WorkTraces.scss
+++ b/src/components/WorkTraces/WorkTraces.scss
@@ -1,19 +1,57 @@
 .work-traces {
-	.company-logo {
-		display: flex;
-		justify-content: center;
-		filter: grayscale(0.3);
-		align-items: center;
-		opacity: 0.8;
-		transition: 500ms;
-		margin-bottom: 4rem;
-		margin-top: 4rem;
-		img {
-			width: 180px;
-		}
-		&:hover {
-			opacity: 1;
-			filter: grayscale(0);
+	.company {
+		.company-info {
+			height: 320px;
+			display: flex;
+			margin: 8rem auto;
+			width: 80%;
+			span {
+				font-family: 'Haskoy';
+				font-size: 12rem;
+				font-weight: 800;
+			}
+			.media-left {
+				width: 100px;
+				z-index: 1;
+				span {
+					font-size: 14rem;
+				}
+			}
+			.wrapper {
+				border-radius: 20px;
+				background-attachment: fixed;
+				background-size: cover;
+				height: inherit;
+				width: inherit;
+				transition: 200ms;
+				img {
+					width: 180px;
+				}
+				.marquee-container {
+					z-index: 0;
+					animation-duration: 0.2s;
+				}
+			}
+			&:hover {
+				.media-left {
+					span {
+						color: rgba(171, 139, 101, 1);
+					}
+				}
+				.wrapper {
+					position: relative;
+					&::before {
+						position: absolute;
+						width: 100%;
+						height: 100%;
+						content: "";
+						border-radius: 20px;
+						top: 0;
+						left: 0;
+						backdrop-filter: blur(5px);
+					}
+				}
+			}
 		}
 	}
 }
