--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -40,6 +40,7 @@
 		font-size: 4rem;
 		letter-spacing: 0.3rem;
 		color: #000000;
+		word-break: break-all;
 	}
 	.btn-secondary {
 		margin-top: 1rem;
