--- a/src/components/Story/story.scss
+++ b/src/components/Story/story.scss
@@ -1,5 +1,20 @@
 .story {
-	min-height: 100vh;
+	background-image: url(./../../assets/images/story.jpg);
+	background-size: cover;
+	background-attachment: fixed;
+	position: relative;
+	&::before {
+		content: "";
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		backdrop-filter: blur(5px);
+		filter: brightness(0.5);
+	}
+	.container {
+		padding: 1rem 0rem 9rem 0rem;
+	}
 	.image-block {
 		img {
 			width: 100%;
@@ -8,17 +23,25 @@
 			opacity: 0.7;
 			transition: 500ms;
 			border: 2px solid transparent;
-			&:hover {
-				box-shadow: 0px 0px 50px -40px #fff;
-				filter: grayscale(0);
-				border-color: #fff;
-			}
 		}
 		p {
-			color: #aaaaaa;
+			color: rgba($color: #fff, $alpha: 0.8);
 		}
 		p.caption {
-			color: #cccccc;
+			color: #000000;
+			display: inline-block;
+			position: relative;
+			font-weight: 400;
+			.before {
+				background-color: rgba(171, 139, 101, 1);
+				content: "";
+				position: absolute;
+				width: 120%;
+				height: 120%;
+				left: -10%;
+				top: -10%;
+				z-index: -1;
+			}
 		}
 	}
 	.blockquote {
@@ -31,7 +54,8 @@
 	.btn {
 		border: none;
 		box-shadow: none;
-		border-radius: 0px;
+		border-radius: 15px;
+		padding: 10px 20px;
 		&.btn-outline-primary {
 			color: #fff;
 			&:hover {
